<resources>
    <string name="app_name">Rumus Dasar Matermatika</string>
    <string name="judul">MATEMATIKA DASAR</string>
    <string name="subJudul">Rumus Bangun Datar</string>
    <string name="persegiButton">Persegi</string>
    <string name="persegiPanjangButton">Persegi Panjang</string>
    <string name="segitigaButton">SEGITIGA</string>
    <string name="lingkaranButton">LINGKARAN</string>
    <string name="judulPersegi">Rumus Luas Persegi</string>
    <string name="judulPersegiPanjang">Luas Persegi Panjang</string>
    <string name="judulSegitiga">Rumus Luas Segitiga</string>
    <string name="judulLingkaran">Rumus Luas Lingkaran</string>
    <string name="sisiInput">Masukkan sisi persegi (cm)</string>
    <string name="panjangInput">Masukkan panjang (cm)</string>
    <string name="lebarInput">Masukkan lebar (cm)</string>
    <string name="alasInput">Masukkan alas (cm)</string>
    <string name="tinggiInput">Masukkan tinggi (cm)</string>
    <string name="jariInput">Masukkan jari-jari (cm)</string>
    <string name="hitungPersegi">Hitung</string>
    <string name="hitungPersegiPanjang">Hitung</string>
    <string name="hitungSegitiga">Hitung</string>
    <string name="hitungLingkaran">Hitung</string>
    <string name="hasilPersegi" />
    <string name="sisi_invalid">Sisi harus diisi!</string>
    <string name="panjang_invalid">Panjang harus diisi!</string>
    <string name="lebar_invalid">Lebar harus diisi!</string>
    <string name="alas_invalid">Alas harus diisi!</string>
    <string name="tinggi_invalid">Tinggi harus diisi!</string>
    <string name="jari_invalid">Jari-jari harus diisi!</string>
    <string name="menu_histori">Histori</string>
    <string name="menu_about">Tentang Aplikasi</string>
    <string name="menu_bagikan">Bagikan Referensi</string>
    <string name="copyright">Matematika Dasar merupakan aplikasi edukasi untuk menghitung luas bangun datar.\n\nAplikasi ini dibuat untuk kelas
            Untuk memenuhi penilaian Assessment 2. Temukan kodenya di https://github.com/dzakwandhiya/AssessmenMopro\n\nCopyright © 2023 Dzakwan Dhiya Ulhaq.\nAll rights reserved.
    </string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="nama_bangun">Bangun : </string>
    <string name="hasil_rumus">Operasi : </string>
    <string name="histori_hapus">hapus histori </string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="sharelink">Kunjungi github saya:\nhttps://github.com/dzakwandhiya</string>
    <string name="intro">(BARU) RUMUS ONLINE</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>
    <string name="notif_title">Lihat Rumus bangun datar yu!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
</resources>