<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/baloo_paaji"
            android:text="@string/judul"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_paaji"
            android:text="@string/subJudul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/buttonPersegi"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/square"
            android:fontFamily="@font/baloo_paaji"
            android:text="@string/persegiButton"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttoDaftarRumus" />

        <Button
            android:id="@+id/buttoDaftarRumus"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/baloo_paaji"
            android:text="@string/intro"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/buttonPersegiPanjang"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/rectangle"
            android:fontFamily="@font/baloo_paaji"
            android:text="@string/persegiPanjangButton"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPersegi" />

        <Button
            android:id="@+id/buttonSegitiga"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/triangle"
            android:fontFamily="@font/baloo_paaji"
            android:text="@string/segitigaButton"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPersegiPanjang" />

        <Button
            android:id="@+id/buttonLingkaran"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="100dp"
            android:drawableLeft="@drawable/circle"
            android:fontFamily="@font/baloo_paaji"
            android:text="@string/lingkaranButton"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSegitiga" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>